// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should not render icon map select when isCustomOnly 1`] = `
<Fragment>
  <IconStops
    field={
      MockField {
        "_fieldName": "myField",
        "_origin": "source",
      }
    }
    getValueSuggestions={[Function]}
    iconStops={
      Array [
        Object {
          "stop": null,
          "svg": "<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<svg version=\\"1.1\\" id=\\"circle-15\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"15px\\" height=\\"15px\\" viewBox=\\"0 0 15 15\\">
  <path d=\\"M14,7.5c0,3.5899-2.9101,6.5-6.5,6.5S1,11.0899,1,7.5S3.9101,1,7.5,1S14,3.9101,14,7.5z\\"/>
</svg>",
          "value": "circle",
        },
      ]
    }
    onChange={[Function]}
  />
</Fragment>
`;

exports[`Should render custom stops input when useCustomIconMap 1`] = `
<Fragment>
  <EuiSuperSelect
    compressed={true}
    fullWidth={false}
    hasDividers={true}
    isInvalid={false}
    isLoading={false}
    onChange={[Function]}
    options={
      Array [
        Object {
          "inputDisplay": "Custom icon palette",
          "value": "CUSTOM_MAP_ID",
        },
        Object {
          "inputDisplay": <div>
            mock filledShapes option
          </div>,
          "value": "filledShapes",
        },
        Object {
          "inputDisplay": <div>
            mock hollowShapes option
          </div>,
          "value": "hollowShapes",
        },
      ]
    }
    valueOfSelected="CUSTOM_MAP_ID"
  />
  <EuiSpacer
    size="s"
  />
  <IconStops
    field={
      MockField {
        "_fieldName": "myField",
        "_origin": "source",
      }
    }
    getValueSuggestions={[Function]}
    iconStops={
      Array [
        Object {
          "label": "Circle",
          "stop": null,
          "svg": "<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<svg version=\\"1.1\\" id=\\"circle-15\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"15px\\" height=\\"15px\\" viewBox=\\"0 0 15 15\\">
  <path d=\\"M14,7.5c0,3.5899-2.9101,6.5-6.5,6.5S1,11.0899,1,7.5S3.9101,1,7.5,1S14,3.9101,14,7.5z\\"/>
</svg>",
          "value": "circle",
        },
        Object {
          "label": "Marker",
          "stop": "value1",
          "svg": "<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<svg version=\\"1.1\\" id=\\"marker-15\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"15px\\" height=\\"15px\\" viewBox=\\"0 0 15 15\\">
  <path id=\\"path4133\\" d=\\"M7.5,0C5.0676,0,2.2297,1.4865,2.2297,5.2703&#xA;&#x9;C2.2297,7.8378,6.2838,13.5135,7.5,15c1.0811-1.4865,5.2703-7.027,5.2703-9.7297C12.7703,1.4865,9.9324,0,7.5,0z\\"/>
</svg>",
          "value": "marker",
        },
      ]
    }
    onChange={[Function]}
  />
</Fragment>
`;

exports[`Should render default props 1`] = `
<Fragment>
  <EuiSuperSelect
    compressed={true}
    fullWidth={false}
    hasDividers={true}
    isInvalid={false}
    isLoading={false}
    onChange={[Function]}
    options={
      Array [
        Object {
          "inputDisplay": "Custom icon palette",
          "value": "CUSTOM_MAP_ID",
        },
        Object {
          "inputDisplay": <div>
            mock filledShapes option
          </div>,
          "value": "filledShapes",
        },
        Object {
          "inputDisplay": <div>
            mock hollowShapes option
          </div>,
          "value": "hollowShapes",
        },
      ]
    }
    valueOfSelected="filledShapes"
  />
  <EuiSpacer
    size="s"
  />
</Fragment>
`;

exports[`Should render icon map select with custom icons 1`] = `
<Fragment>
  <EuiSuperSelect
    compressed={true}
    fullWidth={false}
    hasDividers={true}
    isInvalid={false}
    isLoading={false}
    onChange={[Function]}
    options={
      Array [
        Object {
          "inputDisplay": "Custom icon palette",
          "value": "CUSTOM_MAP_ID",
        },
        Object {
          "inputDisplay": <div>
            mock filledShapes option
          </div>,
          "value": "filledShapes",
        },
        Object {
          "inputDisplay": <div>
            mock hollowShapes option
          </div>,
          "value": "hollowShapes",
        },
      ]
    }
    valueOfSelected="filledShapes"
  />
  <EuiSpacer
    size="s"
  />
</Fragment>
`;
